temporary disable run gui from non-root user inside docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,12 @@ services:
       - SILVERCOMPLETE_HOST
     volumes:
       - "/tmp/.X11-unix:/tmp/.X11-unix:rw"
-      - "/etc/group:/etc/group:ro"
-      - "/etc/passwd:/etc/passwd:ro"
-      - "/etc/shadow:/etc/shadow:ro"
-      - "/etc/sudoers.d:/etc/sudoers.d:ro"
+      # required to run gui from non-root user inside a docker container
+      # not supported yet
+      # - "/etc/group:/etc/group:ro"
+      # - "/etc/passwd:/etc/passwd:ro"
+      # - "/etc/shadow:/etc/shadow:ro"
+      # - "/etc/sudoers.d:/etc/sudoers.d:ro"
 
 networks:
   silvercomplete:
