--- a/contrib/Info.plist
+++ b/contrib/Info.plist
@@ -32,7 +32,7 @@
                 <key>NSKeyEquivalent</key>
                 <dict>
                     <key>default</key>
-                    <string>.</string>
+                    <string>)</string>
                 </dict>
                 <key>NSMenuItem</key>
                 <dict>
