Fix all warnings on windows and make some cleaning in the project

--- a/.gitignore
+++ b/.gitignore
@@ -55,11 +55,13 @@ Temporary Items
 *.so
 *.dll
 *.dylib
+*.obj
+*.exe
 
 # Qt-es
 
-/.qmake.cache
-/.qmake.stash
+*.qmake.cache
+*.qmake.stash
 *.pro.user
 *.pro.user.*
 *.qbs.user
